--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <br>
     <br>
     <H1 style="background-color: rgb(118, 154, 19);color: aliceblue;">Welcome to Odin Recipes</H1>
-    <li><a href="blob/main/recipies/lasagna.html">Recipe 1</a></li>
-    <li><a href="blob/main/recipies/redpotatos.html">Recipe 2</a></li>
-    <li><a href="blob/main/recipies/lamb.html">Recipe 3</a></li>
+    <li><a href="https://arifahmed19.github.io/Odin-Recipies/recipies/lasagna.html">Recipe 1</a></li>
+    <li><a href="https://arifahmed19.github.io/Odin-Recipies/recipies/redpotatos.html">Recipe 2</a></li>
+    <li><a href="https://arifahmed19.github.io/Odin-Recipies/recipies/lamb.html">Recipe 3</a></li>
 
 
 
