--- a/recipies/lamb.html
+++ b/recipies/lamb.html
@@ -14,7 +14,7 @@
         <h1>Lamb Souvlaki</h1>
         <br>
         <br>
-        <img src="/LambSouvlaki.webp" alt="Lamb Souvlaki">
+        <img src="../LambSouvlaki.webp" alt="Lamb Souvlaki">
         <p>
             Lamb souvlaki with marinated pieces of lamb, threaded on skewers, <br>
             and char-grilled to perfection. I like to serve these with rosemary <br>
