--- a/recipies/lasagna.html
+++ b/recipies/lasagna.html
@@ -15,7 +15,7 @@
         <br>
         <br>
 
-        <img src="/image.webp" alt="chicken">
+        <img src="../image.webp" alt="chicken">
         <p>This simple, sensational marinade and sauce for grilled chicken is made with lemon, garlic,<br> rosemary, and butter. Separate the marinade into thirds: 1/3 for marinating, 1/3 for basting, and 1/3 for topping.</p>
     </section>
     
