--- a/recipies/redpotatos.html
+++ b/recipies/redpotatos.html
@@ -14,7 +14,7 @@
         <h1>Roasted New Red Potatoes</h1>
         <br>
         <br>
-        <img src="/redpotatos.webp" alt="Roasted New Red Potatoes">
+        <img src="../redpotatos.webp" alt="Roasted New Red Potatoes">
         <p>Roasted red potatoes at their best — plain and simple. Red potatoes are <br>tossed with olive oil, salt, and pepper, then roasted to perfection.</p>
     </section>
     
